--- a/src/client/resources/css/panel.css
+++ b/src/client/resources/css/panel.css
@@ -1,6 +1,7 @@
-body {
+html, body {
     margin: 0;
     padding: 0;
+    min-height: 100%;
 }
 
 button {
@@ -23,7 +24,7 @@ button {
     width: 100%;    
 }
 
-@media only screen and (max-width: 900px) {
+@media only screen and (max-width: 1200px) {
     .button-w-1 {
         width: 33.3333%;
     }
@@ -41,7 +42,7 @@ button {
     }
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 900px) {
     .button-w-1 {
         width: 50%;
     }
